# CacheSim

./: .gitignore  CMakeLists.txt  CacheSim.cbp  CacheSim.depend  CacheSim.layout  CacheSim说明.doc  CalcInfo.cpp  CreateCache.cpp  FileTest.cpp  GetInput.cpp  GetReplace.cpp  InitVariables.cpp  LRU.cpp  LruHitProcess.cpp  LruUnhitSpace.cpp  LruUnhitUnspace.cpp  Makefile  PrintOutput.cpp  README.md  README.txt  base.cpp  base.h  functions.cpp  functions.cpp.backup  functions.h  jiangxin.h  jiangxin.trace  libjiangxin.cpp  main.cpp
.github/workflows/: BuildAndRelease.yml
Materials/: Cache-总结讲解.pptx  cache说明.ppt
data/: CacheSim.mmap  cache-Result-format.xlsx  cache说明.ppt  第二次 - 组原2014编程实验.doc
src/: CalcInfo.cpp  FileTest.cpp  GetInput.cpp  InitVariables.cpp  LRU.cpp  PrintOutput.cpp  base.cpp  base.h  main.cpp
